<resources>
    <string name="app_name">Doa Harian</string>
    <string name="kirim">mau di kirim kemana ?</string>
    <string name="makan">اَللَّهُمَّ بَارِكْ لَنَا فِيْمَا رَزَقْتَنَا وَقِنَا عَذَابَ النَّارِ</string>
    <string name="arti_makan">\nArtinya:\n\nYa Allah, berkahilah kami dalam rezeki yang telah Engkau berikan kepada kami dan peliharalah kami dari siksa api neraka</string>
    <string name="sudahmakan">اَلْحَمْدُ ِللهِ الَّذِىْ اَطْعَمَنَا وَسَقَانَا وَجَعَلَنَا مُسْلِمِيْنَ</string>
    <string name="artisudahmakan">\nArtinya:\n\nSegala puji bagi Allah yang telah memberi makan kami dan minuman kami, serta menjadikan kami sebagai orang-orang islam</string>
    <string name="sudahminum">اَلْحَمْدُ ِللهِ الَّذِىْ جَعَلَهُ عَذْبًا فُرَاتًا بِرَحْمَتِهِ وَلَمْ يَجْعَلْهُ مِلْحًا اُجَاجًا بِذُنُوْبِنَا</string>
    <string name="artisudahminum">\nArtinya:\n\nSegala puji bagi Allah yang telah menjadikan air ini (minuman) segar dan menggiatkan dengan rahmat-Nya dan tidak menjadikan air ini (minuman) asin lagi pahit karena dosa-dosa kami</string>
    <string name="sebelumTidur">بِسْمِكَ اللّٰهُمَّ اَحْيَا وَاَمُوْتُ</string>
    <string name="artididur">\nArtinya:\n\nDengan menyebut nama-Mu ya Allah, aku hidup dan aku mati</string>
    <string name="mimpiburuk">اَللّٰهُمَّ إِنّىِ أَعُوْذُ بِكَ مِنْ عَمَلِ الشَّيْطَانِ وَسَيِّئاَتِ اْلأَحْلاَمِ</string>
    <string name="artiburuk">\nArtinya:\n\nYa Allah, sesungguhnya aku mohon perlindungan kepada Engkau dari perbuatan setan dan dari mimpi-mimpi yang buruk</string>
    <string name="mimpibaik">اَلْحَمْدُ ِللهِ الَّذِيْ قَطْلَ الْحَاجَتِ</string>
    <string name="artibaik">\nArtinya:\n\nSegala puji bagi Allah yang telah memberi hajatku</string>
    <string name="banguntidur">اَلْحَمْدُ ِللهِ الَّذِىْ اَحْيَانَا بَعْدَمَآ اَمَاتَنَا وَاِلَيْهِ النُّشُوْرُ</string>
    <string name="artibangun">\nArtinya :\n\nSegala puji bagi Allah yang telah menghidupkan kami sesudah kami mati (membangunkan dari tidur) dan hanya kepada-Nya kami dikembalikan</string>
    <string name="kamarmandi">اَللّٰهُمَّ اِنّىْ اَعُوْذُبِكَ مِنَ الْخُبُثِ وَالْخَبَآئِثِ</string>
    <string name="artikamarmandi">\nArtinya:\n\nYa Allah, aku berlindung pada-Mu dari godaan syetan  laki-laki dan syetan perempuan</string>
    <string name="istinja">اَللّٰهُمَّ طَهِّرُ قَلْبِىْ مِنَ النِّفَاقِ وَحَصِّنْ فَرْخِىْ مِنَ الْفَوَاحِشِ</string>
    <string name="artiistinja">\nArtinya :\n\nWahai Tuhanku, sucikanlah hatiku dari sifat kepura-puraan (munafiq) serta peliharalah kemaluanku dari perbuatan keji</string>
    <string name="kelkamarmandi">غُفْرَانَكَ الْحَمْدُ ِللهِ الَّذِىْ اَذْهَبَ عَنّى اْلاَذَى وَعَافَانِىْ</string>
    <string name="artikelkamarmandi">\nArtinya:\n\nDengan mengharap ampunanMu, segala puji milik Allah yang telah menghilangkan kotoran dari badanku dan yang telah menyejahterakan</string>
    <string name="pagihari">اَللّٰهُمَّ بِكَ اَصْبَحْنَا وَبِكَ اَمْسَيْنَا وَبِكَ نَحْيَا وَبِكَ نَمُوْتُ وَاِلَيْكَ النُّشُوْرُ</string>
    <string name="artipagi">\nArtinya :\n\nYa Allah, karena Engkau kami mengalami waktu pagi dan waktu petang, dan karena Engkau kami hidup dan mati dan kepada-Mu juga kami akan kembali</string>
    <string name="sorehari">اَللّٰهُمَّ بِكَ اَمْسَيْنَا وَبِكَ اَصْبَحْنَا وَبِكَ نَحْيَا وَبِكَ نَمُوْتُ وَاِلَيْكَ الْمَصِيْرُ</string>
    <string name="artisore">\nArtinya :\n\nYa Allah, karena Engkau kami mengalami waktu petang dan waktu pagi, karena Engkau kami hidup dan mati dan kepada-Mu juga kami akan kembali</string>
    <string name="bercermin">اَلْحَمْدُ ِللهِ كَمَا حَسَّنْتَ خَلْقِىْ  فَحَسِّـنْ خُلُقِىْ</string>
    <string name="artibercermin">\nArtinya:\n\nSegala puji bagi Allah, baguskanlah budi pekertiku sebagaimana Engkau telah membaguskan rupa wajahku</string>
    <string name="masukrumah">اَللّٰهُمَّ اِنّىْ اَسْأَلُكَ خَيْرَالْمَوْلِجِ وَخَيْرَالْمَخْرَجِ بِسْمِ اللهِ وَلَجْنَا وَبِسْمِ اللهِ خَرَجْنَا وَعَلَى اللهِ رَبّنَا تَوَكَّلْنَا</string>
    <string name="artimasukrumah">\nArtinya:\n\nYa Allah, sesungguhnya aku mohon kepada-Mu baiknya tempat masuk dan baiknya tempat keluar dengan menyebut nama Allah kami masuk, dan dengan menyebut nama Allah kami keluar dan kepada Allah Tuhan kami, kami bertawakkal</string>
    <string name="keluarrumah">بِسْمِ اللهِ تَوَكَّلْتُ عَلَى اللهِ لاَحَوْلَ وَلاَقُوَّةَ اِلاَّ بِالله</string>
    <string name="artikelrumah">\nArtinya:\n\nDengan menyebut nama Allah aku bertawakal kepada Allah, tiada daya kekuatan melainkan dengan pertologan Allah</string>
    <string name="berpakaian">بِسْمِ اللهِ اَللّٰهُمَّ اِنِّى اَسْأَلُكَ مِنْ خَيْرِهِ وَخَيْرِ مَاهُوَ لَهُ وَاَعُوْذُبِكَ مِنْ شَرِّهِ وَشَرِّمَا هُوَلَهُ</string>
    <string name="artipakaian">\nArtinya:\n\nDengan nama-Mu yaa Allah akku minta kepada Engkau kebaikan pakaian ini dan kebaikan apa yang ada padanya, dan aku berlindung kepada Engkau dari kejahatan pakaian ini dan kejahatan yang ada padanya</string>
    <string name="pakaianbaru">اَلْحَمْدُ لِلّٰهِ الَّذِىْ كَسَانِىْ هَذَا وَرَزَقَنِيْهِ مِنْ غَيْرِ حَوْلٍ مِنِّىْ وَلاَقُوَّةٍ</string>
    <string name="artipakaianbaru">\nArtinya:\n\nSegala puji bagi Allah yang memberi aku pakaian ini dan memberi rizeki dengan tiada upaya dan kekuatan dariku</string>
    <string name="lepaspakaian">بِسْمِ اللهِ الَّذِيْ لاَ إِلَهَ إِلَّا هُوَ</string>
    <string name="artilepaspakaian">\nArtinya:\n\nDengan nama Allah yang tiada Tuhan selain-Nya</string>
    <string name="ilmu">اَللّٰهُمَّ اِنِّى اَسْأَلُكَ عِلْمًا نَافِعًا وَرِزْقًا طَيِّبًا وَعَمَلاً مُتَقَبَّلاً</string>
    <string name="artiilmu">\nArtinya:\n\nYa Allah, sesungguhnya aku mohon kepada-Mu ilmu yang berguna, rezki yang baik dan amal yang baik Diterima. (H.R. Ibnu Majah)</string>
    <string name="sebbelajar">يَارَبِّ زِدْنِىْ عِلْمًا وَارْزُقْنِىْ فَهْمًا</string>
    <string name="artisebbelajar">\nArtinya :\n\nYa Allah, tambahkanlah aku ilmu dan berikanlah aku rizqi akan kepahaman</string>
    <string name="sesbelajar">اَللّٰهُمَّ اِنِّى اِسْتَوْدِعُكَ مَاعَلَّمْتَنِيْهِ فَارْدُدْهُ اِلَىَّ عِنْدَ حَاجَتِىْ وَلاَ تَنْسَنِيْهِ يَارَبَّ الْعَالَمِيْنَ</string>
    <string name="artisebel">\nArtinya :\n\nYa Allah, sesungguhnya aku menitipkan kepada Engkau ilmu-ilmu yang telah Engkau ajarkan kepadaku, dan kembalikanlah kepadaku sewaktu aku butuh kembali dan janganlah Engkau lupakan aku kepada ilmu itu wahai Tuhan seru sekalian alam</string>
    <string name="bepergian">اَللّٰهُمَّ هَوِّنْ عَلَيْنَا سَفَرَنَا هَذَا وَاطْوِعَنَّابُعْدَهُ اَللّٰهُمَّ اَنْتَ الصَّاحِبُ فِى السَّفَرِوَالْخَلِيْفَةُفِى الْاَهْلِ</string>
    <string name="artibepergian">\nArtinya:\n\nYa Allah, mudahkanlah kami berpergian ini, dan dekatkanlah kejauhannya. Ya Allah yang menemani dalam berpergian, dan Engkau pula yang melindungi keluarga</string>
    <string name="kendaraan">سُبْحَانَ الَّذِىْ سَخَّرَلَنَا هَذَا وَمَاكُنَّالَهُ مُقْرِنِيْنَ وَاِنَّآ اِلَى رَبِّنَا لَمُنْقَلِبُوْنَ</string>
    <string name="artikendaraan">\nArtinya :\n\nMaha suci Allah yang telah menundukkan untuk kami (kendaraan) ini. padahal sebelumnya kami tidak mampu untuk menguasainya, dan hanya kepada-Mu lah kami akan kembali</string>
    <string name="naikkapal">بِسْمِ اللهِ مَجْرَهَا وَمُرْسَهَآاِنَّ رَبِّىْ لَغَفُوْرٌرَّحِيْمٌ</string>
    <string name="artikapal">\nArtinya :\n\nDengan nama Allah yang menjalankan kendaraan ini berlayar dan berlabuh, sesungguhnya Tuhanku benar-benar Maha Pengampun lagi Maha Penyayang</string>
    <string name="sampaitujuan">اَلْحَمْدُ ِللهِ الَّذِى سَلَمَنِى وَالَّذِى اَوَنِى وَالَّذِى جَمَعَ الشَّمْلَ بِ</string>
    <string name="artitujuan">\nArtinya:\n\nSegala puji bagi Allah, yang telah menyelamatkan akau dan yang telah melindungiku dan yang mengumpulkanku dengan keluargaku</string>
    <string name="masukmasjid">اَللّٰهُمَّ افْتَحْ لِيْ اَبْوَابَ رَحْمَتِكَ</string>
    <string name="artimasmasjid">\nArtinya:\n\nYa Allah, bukalah untukku pintu-pintu rahmat-Mu</string>
    <string name="wudhu">نَوَيْتُ الْوُضُوْءَ لِرَفْعِ الْحَدَثِ اْلاَصْغَرِ فَرْضًا لِلّٰهِ تَعَالَى</string>
    <string name="artiwudhu">\nArtinya :\n\nSaya niat berwudhu untuk menghilangkan hadast kecil fardu (wajib) karena Allah taala</string>
    <string name="d_oa_ketika_bercermin">D\'OA KETIKA BERCERMIN</string>
    <string name="d_oa_bangun_tidur">D\'OA BANGUN TIDUR</string>
    <string name="bagikan">bagikan</string>
    <string name="d_oa_sebelum_makan">D\'OA SEBELUM MAKAN</string>
    <string name="d_oa_istinja">D\'OA ISTINJA</string>
    <string name="d_oa_masuk_toilet">D\'OA MASUK TOILET</string>
    <string name="d_oa_keluar_toilet">D\'OA KELUAR TOILET</string>
    <string name="do_a_harian">DO\'A HARIAN</string>
    <string name="info">INFO</string>
    <string name="setting">setting</string>
    <string name="d_oa_masuk_rumah">D\'OA MASUK RUMAH</string>
    <string name="d_oa_ketika_mimpi_buruk">D\'OA KETIKA MIMPI BURUK</string>
    <string name="d_oa_ketika_mimpi_baik">D\'OA KETIKA MIMPI BAIK</string>
    <string name="d_oa_pagi_hari">D\'OA PAGI HARI</string>
    <string name="d_oa_sebelum_tidur">D\'OA SEBELUM TIDUR</string>
    <string name="d_oa_setelah_makan">D\'OA SETELAH MAKAN</string>
    <string name="d_oa_setelah_minum">D\'OA SETELAH MINUM</string>
    <string name="d_oa_sore_hari">D\'OA SORE HARI</string>
    <string name="do_a_keluar_rumah">DO\'A KELUAR RUMAH</string>
    <string name="do_a_berpakaian">DO\'A BERPAKAIAN</string>
    <string name="do_a_memakai_pakaian_baru">DO\'A PAKAIAN BARU</string>
    <string name="do_a_melepas_pakaian">DO\'A MELEPAS PAKAIAN</string>
    <string name="do_a_ilmu_bermanfaat">DO\'A ILMU BERMANFAAT</string>
    <string name="do_a_sebelum_belajar">DO\'A SEBELUM BELAJAR</string>
    <string name="do_a_setelah_belajar">DO\'A SETELAH BELAJAR</string>
    <string name="do_a_akan_bepergian">DO\'A AKAN BEPERGIAN</string>
    <string name="do_a_naik_kendaraan">DO\'A NAIK KENDARAAN</string>
    <string name="do_a_ketika_naik_kapal">DO\'A KETIKA NAIK KAPAL</string>
    <string name="do_a_sampai_tujuan">DO\'A SAMPAI TUJUAN</string>
    <string name="do_a_masuk_masjid">DO\'A MASUK MASJID</string>
    <string name="do_a_wudhu">DO\'A WUDHU</string>
    <string name="isiinfo">Aplikasi ini dibuat agar kita bisa mengamalkan doa sehari-hari \n\nUcapan terimakasih kepada Dosen pembimbing dan kepada kelas TI B Universitas Hamzanwadi \n\nAnda dapat menghubungi kami dengan cara :\n </string>
    <string name="email">faisalhdtbsm1@gmail.com</string>
    <string name="facebook">faisal hidayat bsm</string>


</resources>
