<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context="com.faisalhdtbsm.doaharian.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/layar"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/atas"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/do_a_harian"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bismillah"/>

        <include layout="@layout/button" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kiri"
        android:drawableEnd="@drawable/info"
        android:text="@string/info"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tengah"
        android:drawableEnd="@drawable/cari"
        android:text="@string/bagikan"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kanan"
        android:textAlignment="textStart"
        android:drawableEnd="@drawable/pengaturan"
        android:text="@string/setting"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_weight="1"
        />
</LinearLayout>

</LinearLayout>
